[package]
name = "plant_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
    chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"